# sdl-window-engine

./: CMakeLists.txt  Makefile  OPTIONS  README.md  VERSION  doxygen.conf  libswe.cmake  libswe.h
doc/html/: annotated.html  classSWE_1_1ARGB-members.html  classSWE_1_1BaseObject-members.html  classSWE_1_1BinaryBuf.html  classSWE_1_1BitFlags-members.html  classSWE_1_1ButtonsEvent.html  classSWE_1_1CenteredTerminal-members.html  classSWE_1_1CenteredTerminal.html  classSWE_1_1CenteredWindow-members.html  classSWE_1_1CenteredWindow.html  classSWE_1_1Color-members.html  classSWE_1_1Color.html  classSWE_1_1DisplayToolTip-members.html  classSWE_1_1DisplayToolTip.html  classSWE_1_1DisplayWindow-members.html  classSWE_1_1DisplayWindow.html  classSWE_1_1FontAltC8x16-members.html  classSWE_1_1FontAltC8x16.html  classSWE_1_1FontRender-members.html  classSWE_1_1FontRender.html  classSWE_1_1FontRenderPSF-members.html  classSWE_1_1FontRenderPSF.html  classSWE_1_1FontRenderTTF-members.html  classSWE_1_1FontRenderTTF.html  classSWE_1_1FontsCache-members.html  classSWE_1_1FontsCache.html  classSWE_1_1FullTerminal-members.html  classSWE_1_1FullTerminal.html  classSWE_1_1LineEdit-members.html  classSWE_1_1LineEdit.html  classSWE_1_1ListWidget-members.html  classSWE_1_1ListWidget.html  classSWE_1_1ListWidgetItem-members.html  classSWE_1_1ListWidgetItem.html  classSWE_1_1LogWrapper-members.html  classSWE_1_1LogWrapper.html  classSWE_1_1MouseButton.html  classSWE_1_1ObjectClass-members.html  classSWE_1_1ObjectEvent-members.html  (+182 more)
docs/: annotated.html  classSWE_1_1ARGB-members.html  classSWE_1_1ARGB.html  classSWE_1_1BaseObject-members.html  classSWE_1_1BaseObject.html  classSWE_1_1BinaryBuf-members.html  classSWE_1_1BinaryBuf.html  classSWE_1_1BitFlags-members.html  classSWE_1_1BitFlags.html  classSWE_1_1ButtonEvent-members.html  classSWE_1_1ButtonEvent.html  classSWE_1_1ButtonsEvent-members.html  classSWE_1_1ButtonsEvent.html  classSWE_1_1CenteredTerminal-members.html  classSWE_1_1CenteredTerminal.html  classSWE_1_1CenteredWindow-members.html  classSWE_1_1CenteredWindow.html  classSWE_1_1Color-members.html  classSWE_1_1Color.html  classSWE_1_1ColorIndex-members.html  classSWE_1_1ColorIndex.html  classSWE_1_1CommandConsole-members.html  classSWE_1_1CommandConsole.html  classSWE_1_1DisplayScene-members.html  classSWE_1_1DisplayScene.html  classSWE_1_1DisplayToolTip-members.html  classSWE_1_1DisplayToolTip.html  classSWE_1_1DisplayWindow-members.html  classSWE_1_1DisplayWindow.html  classSWE_1_1FontAltC8x16-members.html  classSWE_1_1FontAltC8x16.html  classSWE_1_1FontRender-members.html  classSWE_1_1FontRender.html  classSWE_1_1FontRenderPSF-members.html  classSWE_1_1FontRenderPSF.html  classSWE_1_1FontRenderTTF-members.html  classSWE_1_1FontRenderTTF.html  classSWE_1_1FontsCache-members.html  classSWE_1_1FontsCache.html  classSWE_1_1FullTerminal-members.html  (+304 more)
examples/: CMakeLists.txt  test.json
examples/test_term_cmd/: CMakeLists.txt
examples/test_term_cmd/src/: mainscreen.cpp  mainscreen.h  settings.cpp  settings.h  terminal.cpp
examples/test_term_gui/: CMakeLists.txt
examples/test_term_gui/src/: mainscreen.cpp  mainscreen.h  terminal.cpp
lua/: CMakeLists.txt  README.md  apidoc.json  editor.json  start.lua  template.lua
lua/api/: apidoc_audio.js  apidoc_binarybuf.js  apidoc_color.js  apidoc_fontrender.js  apidoc_key.js  apidoc_randomhit.js  apidoc_rect.js  apidoc_signal.js  apidoc_streambuf.js  apidoc_streamfile.js  apidoc_streamnet.js  apidoc_swe.js  apidoc_terminal.js  apidoc_texture.js  apidoc_translation.js  apidoc_unicodestring.js  apidoc_videocam.js  apidoc_window.js  apidocs_unicoderegex.js
lua/examples/: test_fps.lua  testengine.lua
lua/examples/example/: dclock.lua  example1.lua  example2.lua  example4.lua  example5.lua  paint.lua
lua/examples/game15/: game15.lua
lua/examples/game2048/: game2048.lua
lua/examples/network/: ftp_server.lua  ftp_server_gui.lua
lua/examples/terminal/: main.lua
lua/examples/tetris/: tetris.json  tetris.lua
lua/examples/videocap/: example5.lua
lua/gui/: editor.json  gui_android.lua  gui_button.lua  gui_commander.lua  gui_dialog.lua  gui_editor.lua  gui_filebrowser.lua  gui_tools.lua  map_unicode.lua
lua/main/: SWE_main.cpp
lua/party/lua52/: CMakeLists.txt
lua/party/lua52/src/: CMakeLists.txt  llex.c
lua/src/: CMakeLists.txt  SWE_audio.cpp  SWE_binarybuf.cpp  SWE_binarybuf.h  SWE_bindings.cpp  SWE_color.cpp  SWE_fontrender.cpp  SWE_fontrender.h  SWE_global.h  SWE_keys.cpp  SWE_randomhit.cpp  SWE_randomhit.h  SWE_rect.cpp  SWE_rect.h  SWE_signal.cpp  SWE_streambuf.cpp  SWE_streambuf.h  SWE_streamfile.cpp  SWE_streamnet.cpp  SWE_streamnet.h  SWE_terminal.cpp  SWE_terminal.h  SWE_texture.cpp  SWE_texture.h  SWE_tools.cpp  SWE_tools.h  SWE_translation.cpp  SWE_unicoderegex.cpp  SWE_unicoderegex.h  SWE_unicodestring.cpp  SWE_unicodestring.h  SWE_videocam.cpp  SWE_videocam_ffmpeg.cpp  SWE_window.cpp  SWE_window.h
lua/src/srell/: srell.hpp
src/: IMG_savepng.cpp  IMG_savepng.h  OPTIONS  VERSION  binarybuf.cpp  binarybuf.h  colors.cpp  colors.h  cstring.cpp  cstring.h  cunicode.cpp  cunicode.h  cunicode_color.cpp  cunicode_color.h  display.h  display_scene.cpp  display_scene.h  engine.cpp  engine.h  events.cpp  events.h  fontpsf.h  fontset.cpp  fontset.h  inputs_keys.cpp  inputs_keys.h  jsmn.cpp  jsmn.h  json_wrapper.cpp  json_wrapper.h  json_wrapper_ext.cpp  json_wrapper_ext.h  lua_wrapper.cpp  lua_wrapper.h  music.cpp  music.h  rect.cpp  rect.h  serialize.cpp  serialize.h  (+29 more)
swe/: CMakeLists.txt  binarybuf.cpp  binarybuf.h  colors.cpp  colors.h  cstring.cpp  cstring.h  cunicode.cpp  cunicode.h  cunicode_color.cpp  cunicode_color.h  display.cpp  display.h  display_scene.cpp  display_scene.h  engine.cpp  engine.h  events.cpp  events.h  fontpsf.h  fontset.cpp  fontset.h  inputs_keys.cpp  inputs_keys.h  json_wrapper.cpp  json_wrapper.h  json_wrapper_ext.cpp  json_wrapper_ext.h  lua_wrapper.cpp  lua_wrapper.h  music.cpp  music.h  rect.cpp  rect.h  serialize.cpp  serialize.h  streambuf.cpp  streambuf.h  streamfile.cpp  streamfile.h  (+88 more)
(+122 files in other folders)
