cmake_minimum_required(VERSION 3.14)

project(SDL_WINDOW_ENGINE VERSION 20210320.1)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -ggdb3 -O0 -Wall -Werror -Wno-sign-compare -fsigned-char -DSWE_DEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -Wall -Wno-sign-compare -fsigned-char")

option(SWE_SDL12 "switch to SDL12" OFF)
option(SWE_WITH_JSON "add json format support" ON)
option(SWE_WITH_LUA "add lua support" ON)
option(SWE_FOR_LUA_PLUGIN "create shared plugin" OFF)
option(SWE_WITH_ICONV "add encode string support" OFF)
option(SWE_DLOPEN "add load shared libs support, with -ldl" ON)
option(SWE_EXAMPLES "build examples" ON)
option(SWE_DISABLE_AUDIO "disable library SDL_mixer" OFF)
option(SWE_DISABLE_IMAGE "disable library SDL_image" OFF)
option(SWE_DISABLE_TTF "disable library SDL_ttf" OFF)
option(SWE_DISABLE_NETWORK "disable library SDL_net" ON)
option(SWE_DISABLE_TERMGUI "disable build termwin_gui" ON)
option(SWE_DEBUG_SCENE "scene debug hotkeys: (Shift+F8) - highlight windows regions, (Shift+F9) - dump scene to console, (Shift+F10) - dump scene to json" OFF)
option(SWE_DEBUG_MESSAGES "DEBUG messages" ON)

include(libswe.cmake)
include_directories(.)

add_library(libswe STATIC)
add_subdirectory(swe)

set_target_properties(libswe PROPERTIES PREFIX "")
set_target_properties(libswe PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

if(SWE_EXAMPLES)
    add_subdirectory(examples)
endif()

if(SWE_WITH_LUA)
    pkg_search_module(LUA QUIET lua)

    if(LUA_VERSION VERSION_LESS 5.2)
	include_directories(lua/party/lua52/src)
	set(SWE_WITH_LUA_PARTY ON)
    else()
        add_compile_options(${LUA_CFLAGS})
        add_link_options(${LUA_LDFLAGS})
        link_libraries(${LUA_LIBRARIES})
    endif()

    add_compile_options(-DSWE_WITH_LUA)
    add_compile_options(-DLUA_STACK_DEBUG)
    add_subdirectory(lua)
else()
    unset(SWE_FOR_LUA_PLUGIN CACHE)
endif()
